--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,15 @@
+server:
+  port: 8088
 spring:
   main:
     banner-mode: off
   datasource:
-    url: jdbc:mysql://localhost3306/mysql
+    url: jdbc:mysql://localhost:3306/online_school
     username: root
     password: Liubasa1993.
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 
 
