--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,12 @@ spring:
   main:
     banner-mode: off
   datasource:
-    url: ${DATASOURCE_URL}
-    username: ${DATASOURCE_USERNAME}
-    password: ${DATASOURCE_PASSWORD}
+    url: jdbc:mysql://localhost:3306/online_school
+#  ${DATASOURCE_URL}
+    username: root
+#  ${DATASOURCE_USERNAME}
+    password: Liubasa1993.
+#  ${DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: none
@@ -16,7 +19,10 @@ spring:
       schema-locations: classpath:db/changelog/init-db.sql
       data-locations: classpath:db/changelog/data.sql
       mode: always
-
+#
+#logging:
+#  level:
+#    root: debug
 
 
 
