--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   main:
     banner-mode: off
   datasource:
-    url: jdbc:h2:file:./test;AUTO_SERVER=TRUE;MODE=MySQL
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=MySQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
