--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -11,17 +11,15 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
-
-
   jpa:
     hibernate:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
 
-  sql:
-    init:
-      mode: never
+#  sql:
+#    init:
+#      mode: never
 
   h2:
     console:
