--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,12 +1,12 @@
 server:
-  port: 8080
+  port: 9092
 spring:
   profiles:
     active: test
   main:
     banner-mode: off
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=MySQL
+    url: jdbc:h2:mem:testDB;DB_CLOSE_DELAY=-1;MODE=MySQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
