--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
                 <version>2.2.224</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>3.2.5</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.github.javafaker</groupId>
                 <artifactId>javafaker</artifactId>
