--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
             <relativePath/> <!-- lookup parent from repository -->
         </parent>
         <groupId>com.example</groupId>
-        <artifactId>employeeOffice</artifactId>
+        <artifactId>Online_school</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <name>employeeOffice</name>
-        <description>employeeOffice</description>
+        <name>Online_school</name>
+        <description>Online_school</description>
         <properties>
             <java.version>17</java.version>
         </properties>
@@ -142,7 +142,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version> <!-- Замените на нужную версию -->
+                    <version>2.22.2</version>
                 </plugin>
             </plugins>
             <finalName>
