--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -17,9 +17,9 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
 
-#  sql:
-#    init:
-#      mode: never
+  sql:
+    init:
+      mode: never
 
   h2:
     console:
