--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   main:
     banner-mode: off
@@ -26,5 +26,5 @@ spring:
 
 logging:
   level:
-    root: INFO
+    root: debug
 
