--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
         <java.version>17</java.version>
     </properties>
 
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>sonatype-oss</id>-->
-<!--            <name>Sonatype OSS Repository</name>-->
-<!--            <url>https://oss.sonatype.org/content/repositories/releases/</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
+    <!--    <repositories>-->
+    <!--        <repository>-->
+    <!--            <id>sonatype-oss</id>-->
+    <!--            <name>Sonatype OSS Repository</name>-->
+    <!--            <url>https://oss.sonatype.org/content/repositories/releases/</url>-->
+    <!--        </repository>-->
+    <!--    </repositories>-->
 
     <dependencies>
 
@@ -57,6 +57,15 @@
             <version>8.2.0</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.26.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -213,8 +222,33 @@
                     </excludes>
                 </configuration>
             </plugin>
+                        <plugin>
+                            <groupId>org.liquibase</groupId>
+                            <artifactId>liquibase-maven-plugin</artifactId>
+                            <version>4.8.0</version>
+                            <configuration>
+                                <changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile>
+                                <url>jdbc:mysql://localhost:3306/online_school</url>
+                                <username>root</username>
+                                <password>Liubasa1993.</password>
+                                <driver>com.mysql.cj.jdbc.Driver</driver>
+                            </configuration>
+                        </plugin>
         </plugins>
         <finalName>School</finalName>
+
+        <!--        <resources>-->
+        <!--            <resource>-->
+        <!--                <directory>src/main/resources</directory>-->
+        <!--                <includes>-->
+        <!--                    <include>**/*.xml</include>-->
+        <!--                    <include>**/*.yml</include>-->
+        <!--                    <include>**/*.sql</include>-->
+        <!--                    <include>**/*.properties</include>-->
+        <!--                </includes>-->
+        <!--            </resource>-->
+        <!--        </resources>-->
     </build>
+
 
 </project>
