--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,24 +1,28 @@
 server:
-  port: 8081
+  port: 8080
 spring:
   main:
     banner-mode: off
   datasource:
-    url: jdbc:mysql://localhost:3306/online_school
+    url: jdbc:mysql://localhost:3306/online_school?allowMultiQueries=true
 #  ${DATASOURCE_URL}
     username: root
 #  ${DATASOURCE_USERNAME}
     password: Liubasa1993.
-#  ${DATASOURCE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  #  ${DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: none
 
-  sql:
-    init:
-      schema-locations: classpath:db/changelog/init-db.sql
-      data-locations: classpath:db/changelog/data.sql
-      mode: always
+#  sql:
+#    init:
+#      schema-locations: classpath:db/changelog/v1.0.0-SNAPSHOT/init-db.sql
+#      data-locations: classpath:db/changelog/v1.0.0-SNAPSHOT/data.sql
+#      mode: always
+
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.xml
 
 #logging:
 #  level:
