--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,6 @@
             <scope>test</scope>
         </dependency>
 
-
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -71,14 +70,11 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
-
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>4.26.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -104,11 +100,11 @@
             <version>1.5.20</version>
         </dependency>
 
-    <dependency>
-        <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi-ui</artifactId>
-        <version>1.6.4</version>
-    </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -122,7 +118,6 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -169,7 +164,6 @@
             <version>1.2.11.1</version>
         </dependency>
 
-
     </dependencies>
 
     <build>
@@ -205,13 +199,7 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-<!--                    <execution>-->
-<!--                        <id>jacoco-site</id>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>report</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
+
                     <execution>
                         <id>jcc-report</id>
                         <phase>test</phase>
@@ -230,37 +218,27 @@
                         <exclude>com/example/online_school/exception/errorMessage/*</exclude>
                         <exclude>com/example/online_school/entity/enums/*</exclude>
                         <exclude>com/example/online_school/mapper/*</exclude>
+                        <exclude>com/example/online_school/security/*</exclude>
+                        <exclude>com/example/online_school/security/utils/*</exclude>
                         <exclude>com/example/online_school/entity/*</exclude>
                         <exclude>com/example/online_school/OnlineSchoolApplication.class</exclude>
                     </excludes>
                 </configuration>
             </plugin>
-                        <plugin>
-                            <groupId>org.liquibase</groupId>
-                            <artifactId>liquibase-maven-plugin</artifactId>
-                            <version>4.8.0</version>
-                            <configuration>
-                                <changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile>
-                                <url>jdbc:mysql://localhost:3306/online_school</url>
-                                <username>root</username>
-                                <password>Liubasa1993.</password>
-                                <driver>com.mysql.cj.jdbc.Driver</driver>
-                            </configuration>
-                        </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.8.0</version>
+                <configuration>
+                    <changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile>
+                    <url>jdbc:mysql://localhost:3306/online_school</url>
+                    <username>root</username>
+                    <password>Liubasa1993.</password>
+                    <driver>com.mysql.cj.jdbc.Driver</driver>
+                </configuration>
+            </plugin>
         </plugins>
         <finalName>School</finalName>
-
-        <!--        <resources>-->
-        <!--            <resource>-->
-        <!--                <directory>src/main/resources</directory>-->
-        <!--                <includes>-->
-        <!--                    <include>**/*.xml</include>-->
-        <!--                    <include>**/*.yml</include>-->
-        <!--                    <include>**/*.sql</include>-->
-        <!--                    <include>**/*.properties</include>-->
-        <!--                </includes>-->
-        <!--            </resource>-->
-        <!--        </resources>-->
     </build>
 
 
