--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -1,16 +1,12 @@
 server:
-  port: 8889
-
+  port: 8080
 spring:
   main:
     banner-mode: off
-  messages:
-    basename: ValidationMessages
-
   datasource:
-    url: jdbc:mysql://${DATASOURCE_DATABASE_HOST}:${DATASOURCE_DATABASE_PORT}/${DATASOURCE_DATABASE_NAME}?allowMultiQueries=true
-    username: ${DATASOURCE_DATABASE_USERNAME}
-    password: ${DATASOURCE_DATABASE_PASSWORD}
+    url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB}?allowMultiQueries=true
+    username: ${MYSQL_USER}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -20,6 +16,4 @@ spring:
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.xml
 
-logging:
-    level:
-      root: info
+
